--- a/packages/SystemUI/res/values/p404_dimens.xml
+++ b/packages/SystemUI/res/values/p404_dimens.xml
@@ -20,4 +20,6 @@
     <dimen name="horizontal_max_shift">3.0dp</dimen>
     <dimen name="vertical_max_shift">2.0dp</dimen>
 
+    <!-- Width of the battery icon in the status bar when set to circle style. -->
+    <dimen name="status_bar_battery_icon_circle_width">13.5dp</dimen>
 </resources>
